# programming-lab

./: folder_structure.sh
POC/: data_cls_slots.py  named_tuple.py  named_tuple_data_class.py  oop_composition_cart_sys_adv.py  oop_composition_cart_system.py  shopping_cart_optional_union_dataclass.py
POC/basics/: dict_cmd.py
POC/calculator/: __main__.py  main.py  operations.py
POC/code/: README.md  lazy_initialization.py  lru_cache.py  protected_var.py  protected_var1.py  pydantic_custom_validator.py  pydantic_sample.py  pydantic_sample1.py  pydantic_sample2.py  task_manager.py
POC/code/kafka/: test_consumer.py  test_producer.py
POC/code/kafka/src/clickhouse/: kf_ch_consumer.py  kf_for_ch_producer.py
POC/code/kafka/utilities/: kafka_commands.py
POC/my_poetry_package/: README.md  pyproject.toml
POC/my_poetry_package/mypackage/: __init__.py
POC/package_build/: setup.py
POC/pydantic/: pydantic1.py  pydantic2.py
POC/water_project/: logging_config.py  main.py
POC/water_project/tests/: test_fetcher.py  test_logging.py
POC/water_project/weather_app/:  utils.py  fetcher.py
ai_dataops_platform/: README.MD
ai_dataops_platform/backend/: pyproject.toml
ai_dataops_platform/backend/app/: main.py
ai_dataops_platform/backend/app/database/: base.py  session.py
ai_dataops_platform/backend/app/models/: pipeline_model.py
file-manager-cli/: README.md
file-manager-cli/file_manager_cli/: cli.py
sql_config/: .gitignore  main.py  requirements.txt
sql_config/config/: sql_config.py
sql_config/db/: mysql_connector.py
(+2 files in other folders)
